[package]
name = "bangk-ico"
description = "Bangk's ICO On-Chain program"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
no-entrypoint = ["bangk-onchain-common/no-entrypoint"]
test-sbf = ["debug-msg"]
debug-msg = ["bangk-onchain-common/debug-msg"]

[dependencies]
bangk-macro = { path = "../bangk-macro" }
bangk-onchain-common = { path = "../bangk-onchain-common" }

borsh.workspace = true
chrono.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde.workspace = true
shank.workspace = true
solana-program.workspace = true
solana-security-txt.workspace = true
spl-associated-token-account.workspace = true
spl-token-2022.workspace = true
spl-token-metadata-interface.workspace = true

[dev-dependencies]
bangk-onchain-common = { path = "../bangk-onchain-common", features = ["debug-msg"] }
tests-utilities = { path = "../tests-utilities" }
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_warn"] }
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio = "1.39.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
