[package]
name = "bangk-onchain-common"
description = "Common utilities for Bangk’s On-Chain programs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
no-entrypoint = []
test-sbf = ["debug-msg"]
debug-msg = []

[dependencies]
bangk-macro = { path = "../bangk-macro" }
borsh.workspace = true
chrono.workspace = true
derive_more.workspace = true
num-derive.workspace = true
num-traits.workspace = true
shank.workspace = true
solana-program.workspace = true
spl-token-2022.workspace = true
spl-token-metadata-interface.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
