[package]
name = "tests-onchain-ico"
description = "Tests for Bangk’s ICO On-Chain program"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version = "1.75.0"

[dependencies]
bangk-ico = { path = "../bangk-ico", features = ["no-entrypoint"] }
bangk-onchain-common = { path = "../bangk-onchain-common" }

[dev-dependencies]
tests-utilities = { path = "../tests-utilities" }
borsh.workspace = true
chrono.workspace = true
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_warn"] }
solana-program.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
spl-associated-token-account.workspace = true
spl-pod.workspace = true
spl-token-2022.workspace = true
spl-token-metadata-interface.workspace = true

[lints]
workspace = true
